--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,4 +1,4 @@
-\documentclass[lineno,pdflatex,sn-mathphys-num]{sn-jnl}
+\documentclass[pdflatex,sn-mathphys-num]{sn-jnl}
 
 \usepackage{amssymb}
 \usepackage{mathtools}
