--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -59,6 +59,8 @@
 \newcommand{\TrueP}{\mathit{True}}
 \newcommand{\FalseP}{\mathit{False}}
 \newcommand{\NotP}{\mathit{Not}}
+\newcommand{\ServerP}{\mathit{Server}}
+\newcommand{\ClientP}{\mathit{Client}}
 \newcommand{\EchoP}{\mathit{Echo}}
 \newcommand{\Nat}{\mathbb{N}}
 \newcommand{\Bool}{\mathbb{B}}
