--- a/paper/calculus.tex
+++ b/paper/calculus.tex
@@ -77,7 +77,7 @@ occurrences of $X$ in $A$ with $B$.
                     & | & \Wait\x.P               & \text{wait} \\
                     & | & \Close\x                & \text{close} \\
                     & | & \Case\x\z{P}{Q}         & \text{case} \\
-                    & | & \Select\x{\InTag_i}\z.P & \text{left/right selection} \\
+                    & | & \Select\x{\InTag_i}\z.P & \text{select} \\
                     & | & \Join\x\y\z.P           & \text{join} \\
                     & | & \Fork\x\y\z{P}{Q}       & \text{fork} \\
                     & | & \Forall\x\X\z.P         & \text{for all} \\
