--- a/paper/Type.lagda.tex
+++ b/paper/Type.lagda.tex
@@ -11,7 +11,7 @@ open import Agda.Builtin.Equality.Rewrite
 
 The representation of types is standard, with one constructor for each of the
 forms described in \Cref{sec:types}. We start by defining an indexed data type
-$\AgdaDatatype{PreType}~n$ to represents (\LCP) types in the scope of $n$
+$\AgdaDatatype{PreType}~n$ to represents (\LCC) types in the scope of $n$
 quantifiers and we use elements of $\AgdaDatatype{Fin}~n$ as de Bruijn indices
 for the quantified type variables. In this way, we make sure that pre-types are
 well scoped.
