--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -87,7 +87,7 @@ types is easier than updating them. Even more so considering that the type of
 continuation channels must be added \emph{at the beginning} of a typing context,
 since such channels are fresh by definition.
 
-The formalisation of \LCP that we obtain is both the most complete (in terms of
+The formalisation of \LCC that we obtain is both the most complete (in terms of
 features supported by the calculus) and the most streamlined (in terms of code
 size) among the known formalisations of session/linear
 calculi~\cite{GotoEtAl16,Thiemann19,CastroFerreiraYoshida20,CicconePadovani20,RouvoetPoulsenKrebbersVisser20,SanoKavanaghPientka23,JacobsBalzerKrebbers22,ZackonEtAl25,ZalakainDardha21}.
@@ -97,7 +97,7 @@ with substantially less code.
 
 The rest of the paper is organised as follows.
 %
-\Cref{sec:calculus} describes the syntax and the operational semantics of \LCP
+\Cref{sec:calculus} describes the syntax and the operational semantics of \LCC
 and states the properties of well-typed processes that we formalise and prove,
 namely typing preservation, deadlock freedom and runtime safety.
 %
