--- a/paper/related.tex
+++ b/paper/related.tex
@@ -380,7 +380,7 @@ Finally, it seems that the use of (explicit) continuations affects the
 complexity of the formalisation more than anything else. Indeed, the six
 smallest formalisations (excluding the deadlock freedom results) -- with an
 average size of around 62kb -- are all based on continuations, whether they are
-explicit (\LinearPI, \SCP, \LCP) or ``virtual'' (\GV), while the remaining ones
+explicit (\LinearPI, \SCP, \LCC) or ``virtual'' (\GV), while the remaining ones
 are 263kb on average. This observation is in agreement with the considerations
 we made earlier in this paper concerning the difference between \emph{updating}
 bindings versus \emph{removing and adding} bindings in a typing context. The
