--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,14 +1,14 @@
 \section{Concluding Remarks}
 \label{sec:conclusion}
 
-We have presented a formalisation of \LCP, a variant of the linear
+We have presented a formalisation of \LCC, a variant of the linear
 $\pi$-calculus~\cite{KobayashiPierceTurner99} supported by the same type system
-of \CP~\cite{Wadler14}. Binary sessions are modeled in \LCP using the
+of \CP~\cite{Wadler14}. Binary sessions are modeled in \LCC using the
 continuation-passing encoding described by \citet[extended
 version]{Kobayashi02b} and \citet{DardhaGiachinoSangiorgi17}.
 %
 Under the assumption that the size of a formalisation is a good measure of its
-complexity, the formalisation of \LCP can be qualified as ``simple'' compared to
+complexity, the formalisation of \LCC can be qualified as ``simple'' compared to
 the existing ones.
 %
 In this respect, our work casts some doubts on the actual contribution of
@@ -19,25 +19,25 @@ It is quite striking that, among the approaches that have been proposed to
 overcome context splitting, the one of \citet{SanoKavanaghPientka23} makes use
 of explicit continuations.
 
-We remark that \LCP and the calculus described in the linearity
+We remark that \LCC and the calculus described in the linearity
 challenge~\cite{CarboneEtAl24} are incomparable in terms of expressiveness. On
 the one hand, the challenge only considers a minimal calculus of first-order,
-monomorphic sessions while \LCP is a fully-fledged calculus that supports
+monomorphic sessions while \LCC is a fully-fledged calculus that supports
 linear, shared, higher-order, polymorphic channels. On the other hand, the
-logical foundations of \LCP prevent the modeling of deadlocked processes and of
+logical foundations of \LCC prevent the modeling of deadlocked processes and of
 sequential processes that own both endpoints of a session. These processes can
 be modeled in the calculus of the challenge, where parallel composition and name
 restriction are distinct constructs as in the $\pi$-calculus.
 %
-Because of its logical foundations, we like to think of \LCP as a ``canonical''
+Because of its logical foundations, we like to think of \LCC as a ``canonical''
 calculus that deserves its own space in the context of the linearity challenge
 alongside with (but not in substitution of) more traditional session calculi.
 
-The simple formalisation of \LCP is a good basis for further investigations. We
-have already extended \LCP with support for infinite types and recursive
+The simple formalisation of \LCC is a good basis for further investigations. We
+have already extended \LCC with support for infinite types and recursive
 processes (the source code of this extension is publicly available in the same
-repository as the one that contains the formalisation of \LCP). In the future,
-it would be interesting to formalise the strong normalisation property of \LCP
+repository as the one that contains the formalisation of \LCC). In the future,
+it would be interesting to formalise the strong normalisation property of \LCC
 as a consequence of cut elimination of classical linear logic.
 
 In this work we have focused on models and theories of \emph{binary sessions}
