--- a/paper/agda.tex
+++ b/paper/agda.tex
@@ -4,8 +4,7 @@
 In this section we describe the formalisation of \LCC in Agda. We present in
 detail only some key parts of the code including the representation of types and
 processes, the definition of the operational semantics and the statement of the
-main results. The interested reader may find the complete source code in the
-public repository.
+main results. The complete source code is available in \LCC's public repository.
 
 \input{Type}
 \input{Context}
