--- a/paper/Process.lagda.tex
+++ b/paper/Process.lagda.tex
@@ -32,11 +32,11 @@ least three reasons:
 
 Channels are not given any name. Instead, they are represented as terms
 witnessing that their type is present in the typing context. This is known as
-\emph{co-de Bruijn syntax}~\cite{McBride18}, according to which the typing
-context associated with a term (a process, a channel) only contains the types of
-the channels that actually occur within the term. For this reason, typing
-contexts are split eagerly, according to the structure of processes, to make
-sure that channels are appropriately (and above all linearly) distributed among
+\emph{co-de Bruijn syntax}~\cite{McBride18}, whereby the typing context
+associated with a term (a process, a channel) only contains the types of the
+channels that actually occur within the term. For this reason, typing contexts
+are split eagerly, according to the structure of processes, to make sure that
+channels are appropriately (and above all linearly) distributed among
 sub-processes, so that each channel is used exactly once.
 %
 Concretely, a channel of type $A$ is a predicate that holds for the singleton
@@ -74,22 +74,24 @@ data Proc : Context → Set where
   cut       : ∀{A} → ∀[ ((A ∷_) ⊢ Proc) ∗ ((dual A ∷_) ⊢ Proc) ⇒ Proc ]
 \end{code}
 
-The constructor \AgdaInductiveConstructor{link} models a process of the form
-$\Link\x\y$. This process is well typed in a context of the form $x : A, y :
-\dual{A}$, namely a context satisfying the predicate
+The constructor \AgdaInductiveConstructor{link} builds a link $\Link\x\y$. This
+process is well typed in a context of the form $x : A, y : \dual{A}$, namely a
+context satisfying the predicate
 $\AgdaDatatype{Ch}~A~\AgdaDatatype{∗}~\AgdaDatatype{Ch}~(\AgdaFunction{dual}~A)$
 which we see on the left-hand side of \AgdaFunction{⇒}.
-%
-The constructor \AgdaInductiveConstructor{cut} models a cut $\Cut[A]\x{P}{Q}$.
-For this process to be well typed in a context $\Context$, it must be the case
-that $\Splitting\Context\ContextD\ContextE$ so that $P$ and $Q$ are well typed
-in the contexts $x : A, \ContextD$ and $x : \dual{A}, \ContextE$ respectively.
-Since $x$ is the most recently introduced channel, the types $A$ and $\dual{A}$
-is added \emph{at the front} of $\ContextD$ and $\ContextE$, which we do by
-means of the functions $(A~\AgdaInductiveConstructor{∷\_})$ and
-$(\AgdaFunction{dual}~A~\AgdaInductiveConstructor{∷\_})$ (these are partial
+
+The constructor \AgdaInductiveConstructor{cut} builds a cut $\Cut[A]\x{P}{Q}$.
+This process is well typed in a context $\Context$ if
+$\Splitting\Context\ContextD\ContextE$ so that $P$ and $Q$ are well typed in the
+contexts $x : A, \ContextD$ and $x : \dual{A}, \ContextE$, which are obtained
+from $\ContextD$ and $\ContextE$ by adding the bindings $x : A$ and $x :
+\dual{A}$, respectively. Since $x$ is the most recently introduced channel, the
+types $A$ and $\dual{A}$ are added \emph{in front} of $\ContextD$ and
+$\ContextE$, which we do by means of the functions
+$(A~\AgdaInductiveConstructor{∷\_})$ and
+$(\AgdaFunction{dual}~A~\AgdaInductiveConstructor{∷\_})$. These are partial
 applications of the constructor $\AgdaInductiveConstructor{\_∷\_}$ for lists to
-which we have supplied the left operand).
+which we have supplied the left operand.
 
 All the remaining constructors basically follow the same pattern: they possibly
 quantify over some types $A$ and $B$ and then (implicitly) over a typing context
@@ -100,30 +102,28 @@ satisfies $P$. In general, $P$ is a (separating) conjunction of sub-predicates
 corresponding to the channel on which the process is acting and to the premises
 of its typing rule.
 
-For example, the constructor \AgdaInductiveConstructor{fail}, which corresponds
-to a process of the form $\Fail\x$, requires the context $\Context$ to satisfy
-the predicate
+For example, the constructor \AgdaInductiveConstructor{fail}, which builds a
+process $\Fail\x$, requires the context $\Context$ to satisfy the predicate
 $\AgdaDatatype{Ch}~\AgdaInductiveConstructor{⊤}~\AgdaDatatype{∗}~\AgdaFunction{U}$,
 meaning that $\Context$ must contain an entry \AgdaInductiveConstructor{⊤}
 (\AgdaFunction{U} is the universal predicate that holds for every context, \cf
 \Cref{tab:predicates}). That form of $\Context$ matches the typing context in
 the conclusion of the rule \FailRule.
 
-The constructor \AgdaInductiveConstructor{wait} corresponds to a process of the
-form $\Wait\x.P$ and requires $\Context$ to (separately) satisfy
+The constructor \AgdaInductiveConstructor{wait}, which builds a process
+$\Wait\x.P$, requires $\Context$ to (separately) satisfy
 $\AgdaDatatype{Ch}~\AgdaInductiveConstructor{⊥}$, that is the channel $x$ on
 which the process is operating, as well as \AgdaDatatype{Proc}, that is the
 continuation process $P$, which must be well typed in the remaining typing
 context.
 
-The constructor \AgdaInductiveConstructor{close}, which corresponds to a process
-of the form $\Close\x$, requires the typing context to be the singleton list
-$[\One]$.
+The constructor \AgdaInductiveConstructor{close}, which builds a process
+$\Close\x$, requires the typing context to be the singleton list $[\One]$.
 
-Let us move on to the processes that produce a continuation channel. For
-example, the constructor \AgdaInductiveConstructor{case} corresponds to a
-process of the form $\Case\x\y{P}{Q}$, where both $P$ and $Q$ use the
-continuation channel $y$. In this case $\Context$ must satisfy the predicate
+Let us move on to the forms that produce continuation channels. As an example,
+the constructor \AgdaInductiveConstructor{case} builds a process
+$\Case\x\y{P}{Q}$, where both $P$ and $Q$ use the continuation channel $y$. In
+this case $\Context$ must satisfy the predicate
 \[
   \AgdaDatatype{Ch}~(A~\AgdaInductiveConstructor{\&}~B)~\AgdaDatatype{∗}~((A~\AgdaInductiveConstructor{∷\_})~\AgdaFunction{⊢}~\AgdaDatatype{Proc}~\AgdaFunction{∩}~(B~\AgdaInductiveConstructor{∷\_})~\AgdaFunction{⊢}~\AgdaDatatype{Proc})
 \]
@@ -134,11 +134,11 @@ establish whether $\Case\x\y{P}{Q}$ is well typed in $\Context$.
 %
 The predicate $\AgdaDatatype{Ch}~(A~\AgdaInductiveConstructor{\&}~B)$ expresses
 the requirement that the type of $x$ must be of the form $A \With B$ and should
-be found in $\Context$. In other words, it must be the case that
-$\Splitting\Context{[A \With B]}\ContextD$ for some $\ContextD$. Now $P$ and $Q$
-must be well typed in the context $\ContextD$ augmented with the association $y
-: A$ and $y : B$, respectively, whence the use of \AgdaFunction{∩} to verify a
-(non-separating) conjunction of the predicates
+be found in $\Context$. In other words, $\Splitting\Context{[A \With
+B]}\ContextD$ for some $\ContextD$. Now $P$ and $Q$ must be well typed in the
+context $\ContextD$ augmented with the association $y : A$ and $y : B$,
+respectively, whence the use of \AgdaFunction{∩} to verify a (non-separating)
+conjunction of the predicates
 $(A~\AgdaInductiveConstructor{∷\_})~\AgdaFunction{⊢}~\AgdaDatatype{Proc}$ and
 $(B~\AgdaInductiveConstructor{∷\_})~\AgdaFunction{⊢}~\AgdaDatatype{Proc}$. The
 two new contexts are obtained by \emph{adding} either $A$ or $B$ to $\ContextD$,
@@ -153,9 +153,9 @@ of the type, as we would have to do in a ``true'' session type system without
 explicit continuation channels.
 
 The interpretation of the remaining constructors is analogous, so we only
-comment \AgdaInductiveConstructor{all}, which represents a polymorphic process
+comment \AgdaInductiveConstructor{all}, which builds a process
 $\Forall\x\X\y.P$. This constructor models the continuation $P$ using
-higher-order abstract syntax: witnessing that a context $\Context$ satisfies the
+higher-order abstract syntax: proving that a context $\Context$ satisfies the
 predicate
 \[
   \AgdaFunction{⋂[}~X~\AgdaFunction{∶}~\AgdaDatatype{Type}~\AgdaFunction]~((\AgdaFunction{subst~[}~X~\AgdaFunction{/]}~A~\AgdaInductiveConstructor{∷\_})~\AgdaFunction{⊢}~\AgdaDatatype{Proc}
@@ -166,7 +166,7 @@ predicate
   ((\AgdaFunction{subst~[}~X~\AgdaFunction{/]}~A~\AgdaInductiveConstructor{∷\_})~\AgdaFunction{⊢}~\AgdaDatatype{Proc}
 \]
 applied to $\Context$. Note that the side condition $X \not\in \fv\Context$ of
-\ForallRule is enforced \emph{by definition}:
+\ForallRule is trivially enforced \emph{by definition}:
 %
 $A$ has type $\AgdaDatatype{PreType}~\AgdaInductiveConstructor{1}$, that is a
 pre-type with \emph{at most one} free type variable $X$, whereas $\Context$ is a
