--- a/paper/Safety.tex
+++ b/paper/Safety.tex
@@ -117,10 +117,13 @@ and indexed by the typing context $\ContextC$ of the whole reduction context:
 \AgdaFunction{]}\<%
 \end{code}
 
-Note the presence of two constructors \AgdaInductiveConstructor{cut-l} and
-\AgdaInductiveConstructor{cut-r} which distinguish on whether the hole is found
-in the left (respectively, right) sub-context, as per the grammar of reduction
-contexts given in \Cref{sec:properties}.
+The constructor \AgdaInductiveConstructor{hole} builds a hole, as the name
+implies.
+%
+The constructors \AgdaInductiveConstructor{cut-l} and
+\AgdaInductiveConstructor{cut-r} build reduction contexts where the hole is
+found in the left (respectively, right) sub-term of a cut, as per the grammar of
+reduction contexts given in \Cref{sec:properties}.
 
 Substitution inside a reduction context $\ReductionContext$ is a straightforward
 function $\AgdaFunction{\_⟦\_⟧}$ that operates recursively on the structure of
@@ -189,6 +192,9 @@ $\ReductionContext$:
 \AgdaBound{P}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟧}}\AgdaSymbol{))}\<%
 \end{code}
+
+This notion of process substitution preserves typing by construction thanks to
+the fact that both processes and reduction contexts are intrinsically typed.
 
 A process $P$ is well formed if every unguarded sub-process $Q$ in it is alive.
 
